added service registry and swagger docs, security updated